--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,10 +1,10 @@
 @import 'ui-kit';
 
 :host {
-  // Layout
-  padding: $large-gutter;
+  @include zil-grid-row(space-between) {
+    padding: $large-gutter;
+  }
 
-  // Styling
   @include mat-elevation(6);
 
   background: {
