--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,10 +1,10 @@
 @import 'ui-kit';
 
 :host {
-  // Layout
-  padding: $large-gutter 0;
+  @include zil-grid-column(space-between) {
+    padding: $large-gutter 0;
+  }
 
-  // Styling
   @include mat-elevation(4);
 
   background: {
