--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,7 @@
 @include mat-core-theme($theme);
 
 // Components
+@include mat-autocomplete-theme($theme);
 @include mat-form-field-theme($theme);
 @include mat-icon-theme($theme);
 @include mat-input-theme($theme);
