--- a/src/app/scenes/blockchain-info/blockchain-info.component.html
+++ b/src/app/scenes/blockchain-info/blockchain-info.component.html
@@ -1,54 +1,54 @@
 <zil-layout-grid>
-  <zil-layout-grid-cell span="6">
+  <zil-layout-grid-cell zil-span="6">
     <zil-tile>
       <zil-tile-title>Transaction Rate</zil-tile-title>
       <zil-tile-content>580 / 3800</zil-tile-content>
     </zil-tile>
   </zil-layout-grid-cell>
 
-  <zil-layout-grid-cell span="6">
+  <zil-layout-grid-cell zil-span="6">
     <zil-tile>
       <zil-tile-title>Number of Known Peers</zil-tile-title>
       <zil-tile-content>{{ (blockchainInfo$ | async)?.NumPeers | number }}</zil-tile-content>
     </zil-tile>
   </zil-layout-grid-cell>
 
-  <zil-layout-grid-cell span="6">
+  <zil-layout-grid-cell zil-span="6">
     <zil-tile>
       <zil-tile-title>Number of Shards</zil-tile-title>
-      <zil-tile-content>{{ 15 | number }}</zil-tile-content>
+      <zil-tile-content>{{ (blockchainInfo$ | async)?.ShardingStructure.NumPeers.length | number }}</zil-tile-content>
     </zil-tile>
   </zil-layout-grid-cell>
 
-  <zil-layout-grid-cell span="6">
+  <zil-layout-grid-cell zil-span="6">
     <zil-tile>
       <zil-tile-title>ZIL USD Price</zil-tile-title>
-      <zil-tile-content>{{ 3 | currency : 'USD' }}</zil-tile-content>
+      <zil-tile-content>{{ (marketInfo$ | async)?.price }}</zil-tile-content>
     </zil-tile>
   </zil-layout-grid-cell>
 
-  <zil-layout-grid-cell span="6">
+  <zil-layout-grid-cell zil-span="6">
     <zil-tile>
       <zil-tile-title>ZIL Total Market Cap</zil-tile-title>
-      <zil-tile-content>{{ 15 | currency : 'USD' }}</zil-tile-content>
+      <zil-tile-content>{{ (marketInfo$ | async)?.totalZilSupply }}</zil-tile-content>
     </zil-tile>
   </zil-layout-grid-cell>
 
-  <zil-layout-grid-cell span="6">
+  <zil-layout-grid-cell zil-span="6">
     <zil-tile>
       <zil-tile-title>ZIL Total Outstanding</zil-tile-title>
-      <zil-tile-content>21M ZIL</zil-tile-content>
+      <zil-tile-content>{{ (marketInfo$ | async)?.capitalization }}</zil-tile-content>
     </zil-tile>
   </zil-layout-grid-cell>
 
-  <zil-layout-grid-cell span="6">
+  <zil-layout-grid-cell zil-span="6">
     <zil-tile>
       <zil-tile-title>Mining Difficulty</zil-tile-title>
       <zil-tile-content>{{ 100500 | number }}</zil-tile-content>
     </zil-tile>
   </zil-layout-grid-cell>
 
-  <zil-layout-grid-cell span="6">
+  <zil-layout-grid-cell zil-span="6">
     <zil-tile>
       <zil-tile-title>Blockchain Size</zil-tile-title>
       <zil-tile-content>{{ 8000 | number }}</zil-tile-content>
