--- a/src/packages/foundation/src/components/layout/layout-grid-cell.component.scss
+++ b/src/packages/foundation/src/components/layout/layout-grid-cell.component.scss
@@ -2,7 +2,7 @@
 
 :host {
   @for $column-span from 1 through $layout-grid-columns {
-    &[span="#{$column-span}"] {
+    &[zil-span="#{$column-span}"] {
       @include zil-grid-cell($column-span);
     }
   }
