--- a/src/packages/foundation/src/components/tile/tile-title.component.scss
+++ b/src/packages/foundation/src/components/tile/tile-title.component.scss
@@ -3,7 +3,7 @@
 :host {
   @include zil-grid-cell();
 
-  @include mat-typography-level-to-styles($typography-config, body-1);
+  @include mat-typography-level-to-styles($typography, body-1);
 
   text: {
     transform: uppercase;
