--- a/src/styles/_ui-kit.scss
+++ b/src/styles/_ui-kit.scss
@@ -1,3 +1,5 @@
+@import './theme';
+
 @import './variables';
 
 @import './layout/grid-cell';
@@ -5,4 +7,5 @@
 @import './layout/grid-row';
 @import './layout/grid';
 
+@import './styling/base';
 @import './styling/card';
