--- a/src/app/scenes/block-list/block-list.component.html
+++ b/src/app/scenes/block-list/block-list.component.html
@@ -2,38 +2,44 @@
   <mat-tab>
     <ng-template matTabLabel>DS Blocks</ng-template>
 
-    <mat-table [dataSource]="dsBlocks$ | async">
-      <ng-container matColumnDef="BlockNum">
-        <mat-header-cell *matHeaderCellDef>Block #</mat-header-cell>
-        <mat-cell *matCellDef="let block">{{ block.BlockNum }}</mat-cell>
-      </ng-container>
+    <mat-list dense>
+      <mat-list-item *ngFor="let dsBlock of dsBlocks$ | async">
+        <div matLine>
+          <zil-layout-row zil-align="space-between">
+            <span>Block # <zil-link [routerLink]="['ds', dsBlock.BlockNum]">{{ dsBlock.BlockNum }}</zil-link></span>
+            <span>{{ dsBlock.timestamp | timeAgo }}</span>
+          </zil-layout-row>
+        </div>
 
-      <ng-container matColumnDef="Hash">
-        <mat-header-cell *matHeaderCellDef>Hash</mat-header-cell>
-        <mat-cell *matCellDef="let block">{{ block.Hash }}</mat-cell>
-      </ng-container>
-
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let block; columns: displayedColumns" (click)="onNavigate($event, ['ds', block.BlockNum])"></mat-row>
-    </mat-table>
+        <div matLine>
+          <zil-layout-row zil-align="space-between">
+            <span>Mined By <zil-link [routerLink]="['/address', dsBlock.leaderPubKey]">{{ dsBlock.leaderPubKey }}</zil-link></span>
+            <span>Difficulty {{ dsBlock.difficulty | number }}</span>
+          </zil-layout-row>
+        </div>
+      </mat-list-item>
+    </mat-list>
   </mat-tab>
 
   <mat-tab>
     <ng-template matTabLabel>TX Blocks</ng-template>
 
-    <mat-table [dataSource]="txBlocks$ | async">
-      <ng-container matColumnDef="BlockNum">
-        <mat-header-cell *matHeaderCellDef>Block #</mat-header-cell>
-        <mat-cell *matCellDef="let block">{{ block.BlockNum }}</mat-cell>
-      </ng-container>
+    <mat-list dense>
+      <mat-list-item *ngFor="let txBlock of txBlocks$ | async">
+        <div matLine>
+          <zil-layout-row zil-align="space-between">
+            <span>Block # <zil-link [routerLink]="['tx', txBlock.BlockNum]">{{ txBlock.BlockNum }}</zil-link></span>
+            <span>{{ txBlock.Timestamp | timeAgo }}</span>
+          </zil-layout-row>
+        </div>
 
-      <ng-container matColumnDef="Hash">
-        <mat-header-cell *matHeaderCellDef>Hash</mat-header-cell>
-        <mat-cell *matCellDef="let block">{{ block.Hash }}</mat-cell>
-      </ng-container>
-
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let block; columns: displayedColumns" (click)="onNavigate($event, ['tx', block.BlockNum])"></mat-row>
-    </mat-table>
+        <div matLine>
+          <zil-layout-row zil-align="space-between">
+            <span>Mined By <zil-link [routerLink]="['/address', txBlock.MinerPubKey]">{{ txBlock.MinerPubKey }}</zil-link></span>
+            <span>Reward {{ txBlock.Rewards | number }} ZIL</span>
+          </zil-layout-row>
+        </div>
+      </mat-list-item>
+    </mat-list>
   </mat-tab>
 </mat-tab-group>
