--- a/src/app/scenes/tx-block-detail/tx-block-detail.component.html
+++ b/src/app/scenes/tx-block-detail/tx-block-detail.component.html
@@ -20,7 +20,7 @@
 
 <mat-form-field>
   <mat-label>Previous Block Hash</mat-label>
-  <input matInput value="{{ txBlock.header.prevBlockHash }}" readonly>
+  <input matInput value="{{ txBlock.header.PrevBlockHash }}" readonly>
 </mat-form-field>
 
 <mat-form-field>
@@ -50,10 +50,10 @@
 
 <mat-form-field>
   <mat-label>Type</mat-label>
-  <input matInput value="{{ txBlock.header.type }}" readonly>
+  <input matInput value="{{ txBlock.header.Type }}" readonly>
 </mat-form-field>
 
 <mat-form-field>
   <mat-label>Version</mat-label>
-  <input matInput value="{{ txBlock.header.version }}" readonly>
+  <input matInput value="{{ txBlock.header.Version }}" readonly>
 </mat-form-field>
