--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
   </mat-list-item>
 
   <mat-list-item routerLink="blocks">
-    DS / TX Blocks
+    TX / DS Blocks
   </mat-list-item>
 
   <mat-list-item routerLink="transactions">
