--- a/src/app/scenes/block-list/block-list.component.scss
+++ b/src/app/scenes/block-list/block-list.component.scss
@@ -1,7 +1,63 @@
 @import 'ui-kit';
 
 :host {
-  @include zil-grid-cell();
+  @include zil-grid-column(start);
 
   @include zil-card();
+}
+
+.mat-table {
+  width: 100%;
+}
+
+.mat-header-cell, .mat-cell {
+  padding: ($small-gutter / 2);
+
+  line: {
+    height: 1;
+  }
+}
+
+.mat-column {
+  &-id {
+    text: {
+      align: left;
+    }
+  }
+
+  &-timestamp {
+    text: {
+      align: left;
+    }
+  }
+
+  &-txCount {
+    text: {
+      align: right;
+    }
+  }
+
+  &-miner {
+    text: {
+      align: left;
+    }
+  }
+
+  &-reward {
+    text: {
+      align: right;
+    }
+  }
+
+  &-dsBlockId {
+    text: {
+      align: left;
+    }
+  }
+
+  &-difficulty {
+    text: {
+      align: right;
+    }
+  }
 }
