--- a/src/app/scenes/smart-contract-detail/smart-contract-detail.component.scss
+++ b/src/app/scenes/smart-contract-detail/smart-contract-detail.component.scss
@@ -1,7 +1,11 @@
 @import 'ui-kit';
 
 :host {
-  @include zil-grid-cell();
+  @include zil-grid-column(start);
 
   @include zil-card();
+}
+
+pre {
+  padding: 0 $large-gutter;
 }
