--- a/src/app/scenes/transaction-list/transaction-list.component.html
+++ b/src/app/scenes/transaction-list/transaction-list.component.html
@@ -1,17 +1,49 @@
-<mat-list dense>
-  <mat-list-item *ngFor="let transaction of transactions$ | async">
-    <div matLine>
-      <zil-layout-row zil-align="space-between">
-        <span>TX # <zil-link [routerLink]="transaction.ID">{{ transaction.ID }}</zil-link></span>
-        <span>{{ transaction.timestamp | timeAgo }}</span>
-      </zil-layout-row>
-    </div>
+<table mat-table [dataSource]="transactions$ | async">
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef>#</th>
 
-    <div matLine>
-      <zil-layout-row zil-align="space-between">
-        <span>To <zil-link [routerLink]="['/address', transaction.toAddr]">{{ transaction.toAddr }}</zil-link></span>
-        <span>Amount {{ transaction.amount | number }} ZIL</span>
-      </zil-layout-row>
-    </div>
-  </mat-list-item>
-</mat-list>
+    <td mat-cell *matCellDef="let transaction">
+      <zil-link [routerLink]="transaction.id">{{ transaction.id }}</zil-link>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="timestamp">
+    <th mat-header-cell *matHeaderCellDef>Age</th>
+
+    <td mat-cell *matCellDef="let transaction">
+      {{ transaction.timestamp | timeAgo }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="addressFrom">
+    <th mat-header-cell *matHeaderCellDef>From</th>
+
+    <td mat-cell *matCellDef="let transaction">
+      <zil-link [routerLink]="['/address', transaction.addressFrom]">{{ transaction.addressFrom }}</zil-link>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="addressTo">
+    <th mat-header-cell *matHeaderCellDef>To</th>
+
+    <td mat-cell *matCellDef="let transaction">
+      <zil-link [routerLink]="['/address', transaction.addressTo]">{{ transaction.addressTo }}</zil-link>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="value">
+    <th mat-header-cell *matHeaderCellDef>Value</th>
+
+    <td mat-cell *matCellDef="let transaction">
+      {{ transaction.value | currency : 'ZIL' }}
+    </td>
+  </ng-container>
+
+  <thead>
+    <tr mat-header-row *matHeaderRowDef="transactionColumns"></tr>
+  </thead>
+
+  <tbody>
+    <tr mat-row *matRowDef="let transaction; columns: transactionColumns"></tr>
+  </tbody>
+</table>
