--- a/src/app/scenes/block-list/block-list.component.html
+++ b/src/app/scenes/block-list/block-list.component.html
@@ -69,7 +69,7 @@
         <th mat-header-cell *matHeaderCellDef>#</th>
 
         <td mat-cell *matCellDef="let dsBlock">
-          <zil-link [routerLink]="['tx', dsBlock.id]">{{ dsBlock.id }}</zil-link>
+          <zil-link [routerLink]="['ds', dsBlock.id]">{{ dsBlock.id }}</zil-link>
         </td>
       </ng-container>
 
