--- a/src/styles/material.scss
+++ b/src/styles/material.scss
@@ -6,6 +6,7 @@
 
 // Components
 @include mat-autocomplete-theme($theme);
+@include mat-expansion-panel-theme($theme);
 @include mat-form-field-theme($theme);
 @include mat-icon-theme($theme);
 @include mat-input-theme($theme);
