Add code highlight

--- a/src/app/scenes/smart-contract-detail/smart-contract-detail.component.html
+++ b/src/app/scenes/smart-contract-detail/smart-contract-detail.component.html
@@ -18,4 +18,4 @@
   <mat-row *matRowDef="let smartContract; columns: smartContractColumns"></mat-row>
 </mat-table>
 
-<pre>{{ smartContractCode.code }}</pre>
+<ace-editor [text]="smartContractCode.code" mode="ocaml" readOnly="true"></ace-editor>
