--- a/src/app/scenes/smart-contract-detail/smart-contract-detail.component.scss
+++ b/src/app/scenes/smart-contract-detail/smart-contract-detail.component.scss
@@ -6,6 +6,10 @@
   @include zil-card();
 }
 
-pre {
-  padding: 0 $large-gutter;
+ace-editor {
+  min: {
+    height: 60vh;
+  }
+
+  overflow: auto;
 }
