Add mining difficulty to main page

--- a/src/app/scenes/blockchain-info/blockchain-info.component.html
+++ b/src/app/scenes/blockchain-info/blockchain-info.component.html
@@ -58,7 +58,7 @@
   <zil-layout-grid-cell zil-span="6">
     <zil-tile>
       <zil-tile-title>Mining Difficulty</zil-tile-title>
-      <zil-tile-content>{{ 100500 | number }}</zil-tile-content>
+      <zil-tile-content>{{ (marketInfo$ | async)?.miningDifficulty | number }}</zil-tile-content>
     </zil-tile>
   </zil-layout-grid-cell>
 
